--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.1",
         "chrisreedio/bastion": "dev-dev",
+        "chrisreedio/filament-policy-generator": "dev-dev",
         "filament/filament": "^3.0-stable",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
@@ -73,6 +74,10 @@
         {
             "type": "path",
             "url": "./packages/chrisreedio/bastion"
+        },
+        {
+            "type": "path",
+            "url": "./packages/chrisreedio/filament-policy-generator"
         }
     ]
 }
